# newsletters

./: .gitignore  README.md  celerybeat-schedule.db  dump.rdb  pyproject.toml  run_project.sh
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html  blog_form.html  blog_list.html
config/: celery.py  settings.py  urls.py
letters/: admin.py  custom.py  models.py  tasks.py  urls.py  views.py
letters/migrations/: 0001_initial.py  0002_alter_maillog_options.py  0003_alter_client_comment_alter_client_email_and_more.py  0004_alter_maillog_last_sent_and_more.py  0005_newsletter_name.py  0006_newsletter_message.py  0007_maillog_newsletter.py  0008_newsletter_emails.py  0009_alter_maillog_last_sent.py  0010_client_owner_message_owner_newsletter_owner.py  0011_alter_newsletter_status.py  0012_alter_newsletter_status.py
letters/templates/letters/: base.html  client_form.html  client_list.html  index.html  maillog_list.html  message_detail.html  message_form.html  message_list.html  newsletter_form.html  newsletter_list.html
letters/templates/letters/includes/: inc_moderator_panel.html  inc_users_panel.html
src/: _database.ini  constants.py  functions.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_is_content_manager.py
users/templates/users/: login.html  recover_password.html  register.html  user_form.html  user_list.html  verify_email.html
