[tool.poetry]
name = "newsletter"
version = "0.1.0"
description = ""
authors = ["Sergius Art <xcxserj@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
pillow = "^10.0.1"
unidecode = "^1.3.7"
ipython = "^8.15.0"
django-cron = "^0.6.0"
django-extensions = "^3.2.3"
celery = {extras = ["redis"], version = "^5.3.4"}
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
